crates/module-graph/tests/snapshots/text_test__text__less.snap
---
source: crates/module-graph/tests/text_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"styles.less\")"
---
{
    1: Module {
        exports: [],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/styles.less",
        query: None,
        source: TextModule {
            kind: Less,
            source: "@width: 10px;\n@height: @width + 10px;\n\n#header {\n  width: @width;\n  height: @height;\n}\n\n.bordered {\n  border-top: dotted 1px black;\n  border-bottom: solid 2px black;\n}\n\n#menu a {\n  color: #111;\n  .bordered();\n}\n\n.post a {\n  color: red;\n  .bordered();\n}\n",
        },
    },
}
